<resources>
    <string name="app_name">PubLib App</string>
    <string name="mainactivity_startertext">This app is designed to be used with books you have checked out of your library.\n\nOnce you have checked out a book you can scan or enter it\'s ISBN number to store in your personal archive.\n\nBooks can be selected or deselected as favorites.\n\nThe app also allows you to set a reminder to return the book back to the library. The reminder duration can be changed in the Settings section of the App.</string>
    <string name="ButtonOK">OK</string>
    <string name="Archive">Archive</string>
    <string name="Favorites">Favorites</string>

    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="ok">OK</string>

    <string name="baseURL">"https://www.googleapis.com/books/v1/"</string>
    <string name="sign_out">Sign Out</string>

    <string name="AddToArchive">Add to Archive</string>
    <string name="AddToFavorites">Add to Favorites</string>
    <string name="ClearArchive">Clear Archive</string>
    <string name="ClearFavorites">Clear Favorites</string>

    <string name="clearArchiveException">Could not clear the archive</string>

</resources>
