<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aniru.publibapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/CodeFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/mainactivity_startertext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_isbn"
                android:focusedByDefault="false"
                android:layout_width="217dp"
                android:layout_height="41dp"
                android:layout_margin="8dp"
                android:hint="ISBN"
                android:inputType="numberDecimal"
                android:maxLength="13" />

            <Button
                android:id="@+id/btn_OK"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:onClick="OnOk"
                android:text="@string/ButtonOK" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="OnCamera"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"

                android:padding="16dp"
                android:text="@string/Archive"
                android:onClick="OnArchive"
                />

            <Button
                android:id="@+id/btn_Favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="OnFavorites"


                android:text="@string/Favorites" />

            <Button
                android:id="@+id/btn_AddToArchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="OnAddTestDataToArchive"


                android:text="@string/AddToArchive" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_AddToFavorotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="OnAddTestDataToFavorites"


                android:text="@string/AddToFavorites" />

            <Button
                android:id="@+id/btn_ClearArchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="OnClearArchive"

                android:text="@string/ClearArchive" />

            <Button
                android:id="@+id/btn_ClearFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="OnClearFavorites"

                android:text="@string/ClearFavorites" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
